docs: revelead the .vscode environment for debugging settings and compiling settings

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ bin/*
 
 #But don't ignore these contents
 !bin/.gitkeep
+!.vscode/launch.json
+!.vscode/tasks.json
 
 #Ignore .vscode folder
-.vscode/
+.vscode/*
 !.vscode/tasks.json
 !.vscode/launch.json
 
